novo/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PONTO_VIRGULA resto
Rule 2     resto -> vars funcoes vars BEGIN codigo END PONTO
Rule 3     vars -> VAR var_list
Rule 4     vars -> empty
Rule 5     var_list -> var
Rule 6     var_list -> var_list var
Rule 7     var -> id_list DOIS_PONTOS tipo PONTO_VIRGULA
Rule 8     id_list -> ID
Rule 9     id_list -> id_list VIRGULA ID
Rule 10    funcoes -> funcoes funcao
Rule 11    funcoes -> empty
Rule 12    funcao -> FUNCTION ID PARENT_A argumentos_decl PARENT_F DOIS_PONTOS tipo PONTO_VIRGULA vars BEGIN codigo END PONTO_VIRGULA
Rule 13    argumentos_decl -> id_list DOIS_PONTOS tipo
Rule 14    argumentos_decl -> argumentos_decl PONTO_VIRGULA id_list DOIS_PONTOS tipo
Rule 15    argumentos_decl -> empty
Rule 16    tipo -> INTEGER
Rule 17    tipo -> STRING
Rule 18    tipo -> BOOLEAN
Rule 19    tipo -> tipo_array
Rule 20    tipo_array -> ARRAY LBRACKET NUM_INT DOTDOT NUM_INT RBRACKET OF tipo
Rule 21    codigo -> comando_lista
Rule 22    codigo -> codigo PONTO_VIRGULA comando_lista
Rule 23    comando_lista -> comando_assign
Rule 24    comando_lista -> comando_while
Rule 25    comando_lista -> comando_for
Rule 26    comando_lista -> comando_if
Rule 27    comando_lista -> comando_writeln
Rule 28    comando_lista -> comando_readln
Rule 29    comando_lista -> comando_begin
Rule 30    comando_lista -> empty
Rule 31    comando_assign -> ID ASSIGN expressao
Rule 32    comando_assign -> ID LBRACKET expressao RBRACKET ASSIGN expressao
Rule 33    comando_while -> WHILE expressao DO comando_lista
Rule 34    comando_for -> FOR ID ASSIGN expressao TO expressao DO comando_lista
Rule 35    comando_for -> FOR ID ASSIGN expressao DOWNTO expressao DO comando_lista
Rule 36    comando_if -> IF expressao THEN comando_lista
Rule 37    comando_if -> IF expressao THEN comando_lista ELSE comando_lista
Rule 38    comando_writeln -> WRITELN PARENT_A argumentos PARENT_F
Rule 39    comando_readln -> READLN PARENT_A expressao PARENT_F
Rule 40    comando_begin -> BEGIN codigo END
Rule 41    expressao -> termo
Rule 42    expressao -> expressao PLUS termo
Rule 43    expressao -> expressao MINUS termo
Rule 44    expressao -> expressao TIMES termo
Rule 45    expressao -> expressao DIVIDE termo
Rule 46    expressao -> expressao DIV termo
Rule 47    expressao -> expressao MOD termo
Rule 48    expressao -> expressao AND expressao
Rule 49    expressao -> expressao OR expressao
Rule 50    expressao -> expressao EQUAL expressao
Rule 51    expressao -> expressao MENOR expressao
Rule 52    expressao -> expressao MAIOR expressao
Rule 53    expressao -> expressao MENOR_IGUAL expressao
Rule 54    expressao -> expressao MAIOR_IGUAL expressao
Rule 55    termo -> NUM_INT
Rule 56    termo -> NUM_REAL
Rule 57    termo -> ID
Rule 58    termo -> LIT_STRING
Rule 59    termo -> TRUE
Rule 60    termo -> FALSE
Rule 61    termo -> PARENT_A expressao PARENT_F
Rule 62    termo -> ID LBRACKET expressao RBRACKET
Rule 63    termo -> ID PARENT_A argumentos PARENT_F
Rule 64    argumentos -> expressao
Rule 65    argumentos -> argumentos VIRGULA expressao
Rule 66    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
ARRAY                : 20
ASSIGN               : 31 32 34 35
BEGIN                : 2 12 40
BOOLEAN              : 18
DIV                  : 46
DIVIDE               : 45
DO                   : 33 34 35
DOIS_PONTOS          : 7 12 13 14
DOTDOT               : 20
DOWNTO               : 35
ELSE                 : 37
END                  : 2 12 40
EQUAL                : 50
FALSE                : 60
FOR                  : 34 35
FUNCTION             : 12
ID                   : 1 8 9 12 31 32 34 35 57 62 63
IF                   : 36 37
INTEGER              : 16
LBRACKET             : 20 32 62
LIT_STRING           : 58
MAIOR                : 52
MAIOR_IGUAL          : 54
MENOR                : 51
MENOR_IGUAL          : 53
MINUS                : 43
MOD                  : 47
NUM_INT              : 20 20 55
NUM_REAL             : 56
OF                   : 20
OR                   : 49
PARENT_A             : 12 38 39 61 63
PARENT_F             : 12 38 39 61 63
PLUS                 : 42
PONTO                : 2
PONTO_VIRGULA        : 1 7 12 12 14 22
PROGRAM              : 1
RBRACKET             : 20 32 62
READLN               : 39
STRING               : 17
THEN                 : 36 37
TIMES                : 44
TO                   : 34
TRUE                 : 59
VAR                  : 3
VIRGULA              : 9 65
WHILE                : 33
WRITELN              : 38
error                : 

Nonterminals, with rules where they appear

argumentos           : 38 63 65
argumentos_decl      : 12 14
codigo               : 2 12 22 40
comando_assign       : 23
comando_begin        : 29
comando_for          : 25
comando_if           : 26
comando_lista        : 21 22 33 34 35 36 37 37
comando_readln       : 28
comando_while        : 24
comando_writeln      : 27
empty                : 4 11 15 30
expressao            : 31 32 32 33 34 34 35 35 36 37 39 42 43 44 45 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 61 62 64 65
funcao               : 10
funcoes              : 2 10
id_list              : 7 9 13 14
program              : 0
resto                : 1
termo                : 41 42 43 44 45 46 47
tipo                 : 7 12 13 14 20
tipo_array           : 19
var                  : 5 6
var_list             : 3 6
vars                 : 2 2 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PONTO_VIRGULA resto

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID PONTO_VIRGULA resto

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . PONTO_VIRGULA resto

    PONTO_VIRGULA   shift and go to state 4


state 4

    (1) program -> PROGRAM ID PONTO_VIRGULA . resto
    (2) resto -> . vars funcoes vars BEGIN codigo END PONTO
    (3) vars -> . VAR var_list
    (4) vars -> . empty
    (66) empty -> .

  ! shift/reduce conflict for VAR resolved as shift
    VAR             shift and go to state 7
    FUNCTION        reduce using rule 66 (empty -> .)
    BEGIN           reduce using rule 66 (empty -> .)

  ! VAR             [ reduce using rule 66 (empty -> .) ]

    resto                          shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID PONTO_VIRGULA resto .

    $end            reduce using rule 1 (program -> PROGRAM ID PONTO_VIRGULA resto .)


state 6

    (2) resto -> vars . funcoes vars BEGIN codigo END PONTO
    (10) funcoes -> . funcoes funcao
    (11) funcoes -> . empty
    (66) empty -> .

    VAR             reduce using rule 66 (empty -> .)
    FUNCTION        reduce using rule 66 (empty -> .)
    BEGIN           reduce using rule 66 (empty -> .)

    funcoes                        shift and go to state 9
    empty                          shift and go to state 10

state 7

    (3) vars -> VAR . var_list
    (5) var_list -> . var
    (6) var_list -> . var_list var
    (7) var -> . id_list DOIS_PONTOS tipo PONTO_VIRGULA
    (8) id_list -> . ID
    (9) id_list -> . id_list VIRGULA ID

    ID              shift and go to state 14

    var_list                       shift and go to state 11
    var                            shift and go to state 12
    id_list                        shift and go to state 13

state 8

    (4) vars -> empty .

    VAR             reduce using rule 4 (vars -> empty .)
    FUNCTION        reduce using rule 4 (vars -> empty .)
    BEGIN           reduce using rule 4 (vars -> empty .)


state 9

    (2) resto -> vars funcoes . vars BEGIN codigo END PONTO
    (10) funcoes -> funcoes . funcao
    (3) vars -> . VAR var_list
    (4) vars -> . empty
    (12) funcao -> . FUNCTION ID PARENT_A argumentos_decl PARENT_F DOIS_PONTOS tipo PONTO_VIRGULA vars BEGIN codigo END PONTO_VIRGULA
    (66) empty -> .

    VAR             shift and go to state 7
    FUNCTION        shift and go to state 17
    BEGIN           reduce using rule 66 (empty -> .)

    vars                           shift and go to state 15
    funcao                         shift and go to state 16
    empty                          shift and go to state 8

state 10

    (11) funcoes -> empty .

    VAR             reduce using rule 11 (funcoes -> empty .)
    FUNCTION        reduce using rule 11 (funcoes -> empty .)
    BEGIN           reduce using rule 11 (funcoes -> empty .)


state 11

    (3) vars -> VAR var_list .
    (6) var_list -> var_list . var
    (7) var -> . id_list DOIS_PONTOS tipo PONTO_VIRGULA
    (8) id_list -> . ID
    (9) id_list -> . id_list VIRGULA ID

    VAR             reduce using rule 3 (vars -> VAR var_list .)
    FUNCTION        reduce using rule 3 (vars -> VAR var_list .)
    BEGIN           reduce using rule 3 (vars -> VAR var_list .)
    ID              shift and go to state 14

    var                            shift and go to state 18
    id_list                        shift and go to state 13

state 12

    (5) var_list -> var .

    ID              reduce using rule 5 (var_list -> var .)
    VAR             reduce using rule 5 (var_list -> var .)
    FUNCTION        reduce using rule 5 (var_list -> var .)
    BEGIN           reduce using rule 5 (var_list -> var .)


state 13

    (7) var -> id_list . DOIS_PONTOS tipo PONTO_VIRGULA
    (9) id_list -> id_list . VIRGULA ID

    DOIS_PONTOS     shift and go to state 19
    VIRGULA         shift and go to state 20


state 14

    (8) id_list -> ID .

    DOIS_PONTOS     reduce using rule 8 (id_list -> ID .)
    VIRGULA         reduce using rule 8 (id_list -> ID .)


state 15

    (2) resto -> vars funcoes vars . BEGIN codigo END PONTO

    BEGIN           shift and go to state 21


state 16

    (10) funcoes -> funcoes funcao .

    VAR             reduce using rule 10 (funcoes -> funcoes funcao .)
    FUNCTION        reduce using rule 10 (funcoes -> funcoes funcao .)
    BEGIN           reduce using rule 10 (funcoes -> funcoes funcao .)


state 17

    (12) funcao -> FUNCTION . ID PARENT_A argumentos_decl PARENT_F DOIS_PONTOS tipo PONTO_VIRGULA vars BEGIN codigo END PONTO_VIRGULA

    ID              shift and go to state 22


state 18

    (6) var_list -> var_list var .

    ID              reduce using rule 6 (var_list -> var_list var .)
    VAR             reduce using rule 6 (var_list -> var_list var .)
    FUNCTION        reduce using rule 6 (var_list -> var_list var .)
    BEGIN           reduce using rule 6 (var_list -> var_list var .)


state 19

    (7) var -> id_list DOIS_PONTOS . tipo PONTO_VIRGULA
    (16) tipo -> . INTEGER
    (17) tipo -> . STRING
    (18) tipo -> . BOOLEAN
    (19) tipo -> . tipo_array
    (20) tipo_array -> . ARRAY LBRACKET NUM_INT DOTDOT NUM_INT RBRACKET OF tipo

    INTEGER         shift and go to state 24
    STRING          shift and go to state 25
    BOOLEAN         shift and go to state 26
    ARRAY           shift and go to state 28

    tipo                           shift and go to state 23
    tipo_array                     shift and go to state 27

state 20

    (9) id_list -> id_list VIRGULA . ID

    ID              shift and go to state 29


state 21

    (2) resto -> vars funcoes vars BEGIN . codigo END PONTO
    (21) codigo -> . comando_lista
    (22) codigo -> . codigo PONTO_VIRGULA comando_lista
    (23) comando_lista -> . comando_assign
    (24) comando_lista -> . comando_while
    (25) comando_lista -> . comando_for
    (26) comando_lista -> . comando_if
    (27) comando_lista -> . comando_writeln
    (28) comando_lista -> . comando_readln
    (29) comando_lista -> . comando_begin
    (30) comando_lista -> . empty
    (31) comando_assign -> . ID ASSIGN expressao
    (32) comando_assign -> . ID LBRACKET expressao RBRACKET ASSIGN expressao
    (33) comando_while -> . WHILE expressao DO comando_lista
    (34) comando_for -> . FOR ID ASSIGN expressao TO expressao DO comando_lista
    (35) comando_for -> . FOR ID ASSIGN expressao DOWNTO expressao DO comando_lista
    (36) comando_if -> . IF expressao THEN comando_lista
    (37) comando_if -> . IF expressao THEN comando_lista ELSE comando_lista
    (38) comando_writeln -> . WRITELN PARENT_A argumentos PARENT_F
    (39) comando_readln -> . READLN PARENT_A expressao PARENT_F
    (40) comando_begin -> . BEGIN codigo END
    (66) empty -> .

    ID              shift and go to state 41
    WHILE           shift and go to state 42
    FOR             shift and go to state 43
    IF              shift and go to state 44
    WRITELN         shift and go to state 45
    READLN          shift and go to state 46
    BEGIN           shift and go to state 30
    END             reduce using rule 66 (empty -> .)
    PONTO_VIRGULA   reduce using rule 66 (empty -> .)

    codigo                         shift and go to state 31
    comando_lista                  shift and go to state 32
    comando_assign                 shift and go to state 33
    comando_while                  shift and go to state 34
    comando_for                    shift and go to state 35
    comando_if                     shift and go to state 36
    comando_writeln                shift and go to state 37
    comando_readln                 shift and go to state 38
    comando_begin                  shift and go to state 39
    empty                          shift and go to state 40

state 22

    (12) funcao -> FUNCTION ID . PARENT_A argumentos_decl PARENT_F DOIS_PONTOS tipo PONTO_VIRGULA vars BEGIN codigo END PONTO_VIRGULA

    PARENT_A        shift and go to state 47


state 23

    (7) var -> id_list DOIS_PONTOS tipo . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 48


state 24

    (16) tipo -> INTEGER .

    PONTO_VIRGULA   reduce using rule 16 (tipo -> INTEGER .)
    PARENT_F        reduce using rule 16 (tipo -> INTEGER .)


state 25

    (17) tipo -> STRING .

    PONTO_VIRGULA   reduce using rule 17 (tipo -> STRING .)
    PARENT_F        reduce using rule 17 (tipo -> STRING .)


state 26

    (18) tipo -> BOOLEAN .

    PONTO_VIRGULA   reduce using rule 18 (tipo -> BOOLEAN .)
    PARENT_F        reduce using rule 18 (tipo -> BOOLEAN .)


state 27

    (19) tipo -> tipo_array .

    PONTO_VIRGULA   reduce using rule 19 (tipo -> tipo_array .)
    PARENT_F        reduce using rule 19 (tipo -> tipo_array .)


state 28

    (20) tipo_array -> ARRAY . LBRACKET NUM_INT DOTDOT NUM_INT RBRACKET OF tipo

    LBRACKET        shift and go to state 49


state 29

    (9) id_list -> id_list VIRGULA ID .

    DOIS_PONTOS     reduce using rule 9 (id_list -> id_list VIRGULA ID .)
    VIRGULA         reduce using rule 9 (id_list -> id_list VIRGULA ID .)


state 30

    (40) comando_begin -> BEGIN . codigo END
    (21) codigo -> . comando_lista
    (22) codigo -> . codigo PONTO_VIRGULA comando_lista
    (23) comando_lista -> . comando_assign
    (24) comando_lista -> . comando_while
    (25) comando_lista -> . comando_for
    (26) comando_lista -> . comando_if
    (27) comando_lista -> . comando_writeln
    (28) comando_lista -> . comando_readln
    (29) comando_lista -> . comando_begin
    (30) comando_lista -> . empty
    (31) comando_assign -> . ID ASSIGN expressao
    (32) comando_assign -> . ID LBRACKET expressao RBRACKET ASSIGN expressao
    (33) comando_while -> . WHILE expressao DO comando_lista
    (34) comando_for -> . FOR ID ASSIGN expressao TO expressao DO comando_lista
    (35) comando_for -> . FOR ID ASSIGN expressao DOWNTO expressao DO comando_lista
    (36) comando_if -> . IF expressao THEN comando_lista
    (37) comando_if -> . IF expressao THEN comando_lista ELSE comando_lista
    (38) comando_writeln -> . WRITELN PARENT_A argumentos PARENT_F
    (39) comando_readln -> . READLN PARENT_A expressao PARENT_F
    (40) comando_begin -> . BEGIN codigo END
    (66) empty -> .

    ID              shift and go to state 41
    WHILE           shift and go to state 42
    FOR             shift and go to state 43
    IF              shift and go to state 44
    WRITELN         shift and go to state 45
    READLN          shift and go to state 46
    BEGIN           shift and go to state 30
    END             reduce using rule 66 (empty -> .)
    PONTO_VIRGULA   reduce using rule 66 (empty -> .)

    codigo                         shift and go to state 50
    comando_lista                  shift and go to state 32
    comando_assign                 shift and go to state 33
    comando_while                  shift and go to state 34
    comando_for                    shift and go to state 35
    comando_if                     shift and go to state 36
    comando_writeln                shift and go to state 37
    comando_readln                 shift and go to state 38
    comando_begin                  shift and go to state 39
    empty                          shift and go to state 40

state 31

    (2) resto -> vars funcoes vars BEGIN codigo . END PONTO
    (22) codigo -> codigo . PONTO_VIRGULA comando_lista

    END             shift and go to state 51
    PONTO_VIRGULA   shift and go to state 52


state 32

    (21) codigo -> comando_lista .

    END             reduce using rule 21 (codigo -> comando_lista .)
    PONTO_VIRGULA   reduce using rule 21 (codigo -> comando_lista .)


state 33

    (23) comando_lista -> comando_assign .

    END             reduce using rule 23 (comando_lista -> comando_assign .)
    PONTO_VIRGULA   reduce using rule 23 (comando_lista -> comando_assign .)
    ELSE            reduce using rule 23 (comando_lista -> comando_assign .)


state 34

    (24) comando_lista -> comando_while .

    END             reduce using rule 24 (comando_lista -> comando_while .)
    PONTO_VIRGULA   reduce using rule 24 (comando_lista -> comando_while .)
    ELSE            reduce using rule 24 (comando_lista -> comando_while .)


state 35

    (25) comando_lista -> comando_for .

    END             reduce using rule 25 (comando_lista -> comando_for .)
    PONTO_VIRGULA   reduce using rule 25 (comando_lista -> comando_for .)
    ELSE            reduce using rule 25 (comando_lista -> comando_for .)


state 36

    (26) comando_lista -> comando_if .

    END             reduce using rule 26 (comando_lista -> comando_if .)
    PONTO_VIRGULA   reduce using rule 26 (comando_lista -> comando_if .)
    ELSE            reduce using rule 26 (comando_lista -> comando_if .)


state 37

    (27) comando_lista -> comando_writeln .

    END             reduce using rule 27 (comando_lista -> comando_writeln .)
    PONTO_VIRGULA   reduce using rule 27 (comando_lista -> comando_writeln .)
    ELSE            reduce using rule 27 (comando_lista -> comando_writeln .)


state 38

    (28) comando_lista -> comando_readln .

    END             reduce using rule 28 (comando_lista -> comando_readln .)
    PONTO_VIRGULA   reduce using rule 28 (comando_lista -> comando_readln .)
    ELSE            reduce using rule 28 (comando_lista -> comando_readln .)


state 39

    (29) comando_lista -> comando_begin .

    END             reduce using rule 29 (comando_lista -> comando_begin .)
    PONTO_VIRGULA   reduce using rule 29 (comando_lista -> comando_begin .)
    ELSE            reduce using rule 29 (comando_lista -> comando_begin .)


state 40

    (30) comando_lista -> empty .

    END             reduce using rule 30 (comando_lista -> empty .)
    PONTO_VIRGULA   reduce using rule 30 (comando_lista -> empty .)
    ELSE            reduce using rule 30 (comando_lista -> empty .)


state 41

    (31) comando_assign -> ID . ASSIGN expressao
    (32) comando_assign -> ID . LBRACKET expressao RBRACKET ASSIGN expressao

    ASSIGN          shift and go to state 53
    LBRACKET        shift and go to state 54


state 42

    (33) comando_while -> WHILE . expressao DO comando_lista
    (41) expressao -> . termo
    (42) expressao -> . expressao PLUS termo
    (43) expressao -> . expressao MINUS termo
    (44) expressao -> . expressao TIMES termo
    (45) expressao -> . expressao DIVIDE termo
    (46) expressao -> . expressao DIV termo
    (47) expressao -> . expressao MOD termo
    (48) expressao -> . expressao AND expressao
    (49) expressao -> . expressao OR expressao
    (50) expressao -> . expressao EQUAL expressao
    (51) expressao -> . expressao MENOR expressao
    (52) expressao -> . expressao MAIOR expressao
    (53) expressao -> . expressao MENOR_IGUAL expressao
    (54) expressao -> . expressao MAIOR_IGUAL expressao
    (55) termo -> . NUM_INT
    (56) termo -> . NUM_REAL
    (57) termo -> . ID
    (58) termo -> . LIT_STRING
    (59) termo -> . TRUE
    (60) termo -> . FALSE
    (61) termo -> . PARENT_A expressao PARENT_F
    (62) termo -> . ID LBRACKET expressao RBRACKET
    (63) termo -> . ID PARENT_A argumentos PARENT_F

    NUM_INT         shift and go to state 57
    NUM_REAL        shift and go to state 58
    ID              shift and go to state 59
    LIT_STRING      shift and go to state 60
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62
    PARENT_A        shift and go to state 63

    expressao                      shift and go to state 55
    termo                          shift and go to state 56

state 43

    (34) comando_for -> FOR . ID ASSIGN expressao TO expressao DO comando_lista
    (35) comando_for -> FOR . ID ASSIGN expressao DOWNTO expressao DO comando_lista

    ID              shift and go to state 64


state 44

    (36) comando_if -> IF . expressao THEN comando_lista
    (37) comando_if -> IF . expressao THEN comando_lista ELSE comando_lista
    (41) expressao -> . termo
    (42) expressao -> . expressao PLUS termo
    (43) expressao -> . expressao MINUS termo
    (44) expressao -> . expressao TIMES termo
    (45) expressao -> . expressao DIVIDE termo
    (46) expressao -> . expressao DIV termo
    (47) expressao -> . expressao MOD termo
    (48) expressao -> . expressao AND expressao
    (49) expressao -> . expressao OR expressao
    (50) expressao -> . expressao EQUAL expressao
    (51) expressao -> . expressao MENOR expressao
    (52) expressao -> . expressao MAIOR expressao
    (53) expressao -> . expressao MENOR_IGUAL expressao
    (54) expressao -> . expressao MAIOR_IGUAL expressao
    (55) termo -> . NUM_INT
    (56) termo -> . NUM_REAL
    (57) termo -> . ID
    (58) termo -> . LIT_STRING
    (59) termo -> . TRUE
    (60) termo -> . FALSE
    (61) termo -> . PARENT_A expressao PARENT_F
    (62) termo -> . ID LBRACKET expressao RBRACKET
    (63) termo -> . ID PARENT_A argumentos PARENT_F

    NUM_INT         shift and go to state 57
    NUM_REAL        shift and go to state 58
    ID              shift and go to state 59
    LIT_STRING      shift and go to state 60
    TRUE            shift and go to state 61
    FALSE           shift and go to state 62
    PARENT_A        shift and go to state 63

    expressao                      shift and go to state 65
    termo                          shift and go to state 56

state 45

    (38) comando_writeln -> WRITELN . PARENT_A argumentos PARENT_F

    PARENT_A        shift and go to state 66


state 46

    (39) comando_readln -> READLN . PARENT_A expressao PARENT_F

    PARENT_A        shift and go to state 67


state 47

    (12) funcao -> FUNCTION ID PARENT_A . argumentos_decl PARENT_F DOIS_PONTOS tipo PONTO_VIRGULA vars BEGIN codigo END PONTO_VIRGULA
    (13) argumentos_decl -> . id_list DOIS_PONTOS tipo
    (14) argumentos_decl -> . argumentos_decl PONTO_VIRGULA id_list DOIS_PONTOS tipo
    (15) argumentos_decl -> . empty
    (8) id_list -> . ID
    (9) id_list -> . id_list VIRGULA ID
    (66) empty -> .

    ID              shift and go to state 14
    PARENT_F        reduce using rule 66 (empty -> .)
    PONTO_VIRGULA   reduce using rule 66 (empty -> .)

    argumentos_decl                shift and go to state 68
    id_list                        shift and go to state 69
    empty                          shift and go to state 70

state 48

    (7) var -> id_list DOIS_PONTOS tipo PONTO_VIRGULA .

    ID              reduce using rule 7 (var -> id_list DOIS_PONTOS tipo PONTO_VIRGULA .)
    VAR             reduce using rule 7 (var -> id_list DOIS_PONTOS tipo PONTO_VIRGULA .)
    FUNCTION        reduce using rule 7 (var -> id_list DOIS_PONTOS tipo PONTO_VIRGULA .)
    BEGIN           reduce using rule 7 (var -> id_list DOIS_PONTOS tipo PONTO_VIRGULA .)


state 49

    (20) tipo_array -> ARRAY LBRACKET . NUM_INT DOTDOT NUM_INT RBRACKET OF tipo

    NUM_INT         shift and go to state 71


state 50

    (40) comando_begin -> BEGIN codigo . END
    (22) codigo -> codigo . PONTO_VIRGULA comando_lista

    END             shift and go to state 72
    PONTO_VIRGULA   shift and go to state 52


state 51

    (2) resto -> vars funcoes vars BEGIN codigo END . PONTO

    PONTO           shift and go to state 73


state 52

    (22) codigo -> codigo PONTO_VIRGULA . comando_lista
    (23) comando_lista -> . comando_assign
    (24) comando_lista -> . comando_while
    (25) comando_lista -> . comando_for
    (26) comando_lista -> . comando_if
    (27) comando_lista -> . comando_writeln
    (28) comando_lista -> . comando_readln
    (29) comando_lista -> . comando_begin
    (30) comando_lista -> . empty
    (31) comando_assign -> . ID ASSIGN expressao
    (32) comando_assign -> . ID LBRACKET expressao RBRACKET ASSIGN expressao
    (33) comando_while -> . WHILE expressao DO comando_lista
    (34) comando_for -> . FOR ID ASSIGN expressao TO expressao DO comando_lista
    (35) comando_for -> . FOR ID ASSIGN expressao DOWNTO expressao DO comando_lista
    (36) comando_if -> . IF expressao THEN comando_lista
    (37) comando_if -> . IF expressao THEN comando_lista ELSE comando_lista
    (38) comando_writeln -> . WRITELN PARENT_A argumentos PARENT_F
    (39) comando_readln -> . READLN PARENT_A expressao PARENT_F
    (40) comando_begin -> . BEGIN codigo END
    (66) empty -> .

    ID              shift and go to state 41
    WHILE           shift and go to state 42
    FOR             shift and go to state 43
    IF              shift and go to state 44
    WRITELN         shift and go to state 45
    READLN          shift and go to state 46
    BEGIN           shift and go to state 30
    END             reduce using rule 66 (empty -> .)
    PONTO_VIRGULA   reduce using rule 66 (empty -> .)
